[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "caldav/_version.py"

[project]
name = "caldav"
authors = [{ name = "Cyril Robert", email = "cyril@hippie.io" }, { name = "Tobias Brox", email = "caldav@plann.no" }]
license = "GPL-3.0-or-later OR Apache-2.0"
license-files = ["COPYING.*"]
description = "CalDAV (RFC4791) client library"
keywords = []
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "lxml",
  "niquests",
  "recurring-ical-events>=2.0.0",
  "typing_extensions;python_version<'3.11'",
  "icalendar>6.0.0"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/python-caldav/caldav"
Issues = "https://github.com/python-caldav/caldav/issues"
Documentation = "https://caldav.readthedocs.io/"
Changelog = "https://github.com/python-caldav/caldav/blob/master/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "vobject",
  "pytest",
  "coverage",
  "manuel",
  "proxy.py",
  "tzlocal",
  "xandikos",
  "radicale",
  "pyfakefs",
  #"caldav_server_tester"
]
[tool.setuptools_scm]
write_to = "caldav/_version.py"

[tool.setuptools]
py-modules = ["caldav"]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false
