[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "caldav/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  ".#*",      # Emacs lock files
  "#*#",      # Emacs auto-save files
  "*~",       # Backup files
  "*.swp",    # Vim swap files
  "*.pyc",    # Python bytecode
  "__pycache__",
]

[tool.hatch.build.targets.wheel]
exclude = [
  ".#*",
  "#*#",
  "*~",
  "*.swp",
  "*.pyc",
  "__pycache__",
]

[project]
name = "caldav"
authors = [{ name = "Cyril Robert", email = "cyril@hippie.io" }, { name = "Tobias Brox", email = "caldav@plann.no" }]
license = "GPL-3.0-or-later OR Apache-2.0"
license-files = ["COPYING.*"]
description = "CalDAV (RFC4791) client library"
keywords = []
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "lxml",
  "niquests",
  "httpx",
  "recurring-ical-events>=2.0.0",
  "typing_extensions;python_version<'3.11'",
  "icalendar>6.0.0",
  "icalendar-searcher>=1.0.0,<2",
  "dnspython",
  "python-dateutil",
  "PyYAML",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/python-caldav/caldav"
Issues = "https://github.com/python-caldav/caldav/issues"
Documentation = "https://caldav.readthedocs.io/"
Changelog = "https://github.com/python-caldav/caldav/blob/master/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "vobject",
  "pytest",
  "pytest-asyncio",
  "coverage",
  "manuel",
  "proxy.py",
  "tzlocal",
  "xandikos>=0.2.12",
  "radicale",
  "pyfakefs",
  #"caldav_server_tester"
  "deptry>=0.24.0; python_version >= '3.10'",
]
[tool.setuptools_scm]
write_to = "caldav/_version.py"

[tool.setuptools]
py-modules = ["caldav"]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.deptry]
ignore = ["DEP002"]  # Test dependencies (pytest, coverage, etc.) are not imported in main code

[tool.deptry.per_rule_ignores]
DEP001 = ["conf"]  # Local test configuration file, not a package

[tool.ruff]
line-length = 100
target-version = "py39"

# Only apply Ruff to new async files added after v2.2.2
# This allows gradual adoption without reformatting the entire codebase
include = [
    "caldav/aio.py",
    "caldav/async_davclient.py",
    "tests/test_async_davclient.py",
]

[tool.ruff.lint]
# Based on icalendar-searcher config
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade (modernize code)
    "B",    # flake8-bugbear (find bugs)
    "ANN",  # type annotations
]
ignore = [
    "E501",    # Line too long (formatter handles this)
    "ANN401",  # Any type (sometimes necessary)
]

[tool.ruff.format]
# Use Ruff's formatter (Black-compatible)
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["caldav"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    # Ignore deprecation warnings from external libraries
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:niquests",
    # Ignore our own intentional deprecation warnings in tests
    # (tests use deprecated APIs to verify they still work)
    "ignore:tests.conf is deprecated:DeprecationWarning",
    "ignore:tests.conf.client\\(\\) is deprecated:DeprecationWarning",
    # Ignore resource warnings from radicale (upstream issue)
    "ignore:unclosed scandir iterator:ResourceWarning:radicale",
]
